# arithmetic-calculator-with-c-

./: CMakeLists.txt  README.md  calculator  calculator.cpp  description.txt
include/: calculator.hpp
src/: calculator.cpp  main.cpp
